--- a/rfc.docset/Contents/Info.plist
+++ b/rfc.docset/Contents/Info.plist
@@ -6,6 +6,8 @@
 	<string>rfc</string>
 	<key>CFBundleName</key>
 	<string>RFCs</string>
+	<key>DashDocSetFamily</key>
+	<string>dashtoc</string>
 	<key>DocSetPlatformFamily</key>
 	<string>rfc</string>
 	<key>isDashDocset</key>
