add cleaned up index file

--- a/rfc.docset/Contents/Info.plist
+++ b/rfc.docset/Contents/Info.plist
@@ -10,6 +10,8 @@
 	<string>dashtoc</string>
 	<key>DocSetPlatformFamily</key>
 	<string>rfc</string>
+	<key>dashIndexFilePath</key>
+	<string>tools.ietf.org/rfc/index.html</string>
 	<key>isDashDocset</key>
 	<true/>
 </dict>
