update gitignore entries with correct docset name

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # httrack files
-rfc.docset/Contents/Resources/Documents/backblue.gif
-rfc.docset/Contents/Resources/Documents/fade.gif
-rfc.docset/Contents/Resources/Documents/hts-cache
-rfc.docset/Contents/Resources/Documents/hts-log.txt
-rfc.docset/Contents/Resources/Documents/index.html
+RFCs.docset/Contents/Resources/Documents/backblue.gif
+RFCs.docset/Contents/Resources/Documents/fade.gif
+RFCs.docset/Contents/Resources/Documents/hts-cache
+RFCs.docset/Contents/Resources/Documents/hts-log.txt
+RFCs.docset/Contents/Resources/Documents/index.html
