Use rsync to retrieve the RFCs
It's faster and much more efficient than having to scrape the website.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-# httrack files
-RFCs.docset/Contents/Resources/Documents/backblue.gif
-RFCs.docset/Contents/Resources/Documents/fade.gif
-RFCs.docset/Contents/Resources/Documents/hts-cache
-RFCs.docset/Contents/Resources/Documents/hts-log.txt
-RFCs.docset/Contents/Resources/Documents/index.html
+rfcs/
